[gd_scene load_steps=5 format=2]

[ext_resource path="res://main_app/tab_scenes/games_list/GamesList.tscn" type="PackedScene" id=1]
[ext_resource path="res://main_app/tab_scenes/market_guide/CardBuyGuide.tscn" type="PackedScene" id=2]
[ext_resource path="res://main_app/MainScene.gd" type="Script" id=3]
[ext_resource path="res://main_app/tab_scenes/config/Config.tscn" type="PackedScene" id=4]

[node name="MainScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Config" parent="TabContainer" instance=ExtResource( 4 )]
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="CardBuyGuide" parent="TabContainer" instance=ExtResource( 2 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="GameBadgesList" type="MarginContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GamesList" parent="TabContainer" instance=ExtResource( 1 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
